--- a/index.css
+++ b/index.css
@@ -1,21 +1,40 @@
 body{
+    margin-top: 2%;
     text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: #3d3d3d;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+main {
+    background-color: #f4f4f4;
+    margin-left: 30%;
+    margin-right: 30%;
+    padding: 0 0 7% 0;
+    box-shadow: 0 5px 5px #999;
+}
+
+h1 { 
+    font-size: 40px;
+    font-weight: bolder;
+    letter-spacing: 5px; 
+    line-height: 1; 
+    margin-bottom: 30px;
+    margin-top: 0;
 }
 
 button {
     display: inline-block;
     padding: 15px 25px;
-    font-size: 24px;
+    font-size: 22px;
     cursor: pointer;
     text-align: center;
     text-decoration: none;
     outline: none;
     color: #fff;
-    background-color: #593ae8;
+    background-color: #5434d8;
     border: none;
     border-radius: 50px;
-    box-shadow: 0 9px #999;
+    box-shadow: 0 5px #999;
 }
 
 button:active {
@@ -26,6 +45,13 @@ button:active {
 .display-area{
     font-size: xx-large;
     font-weight: bold;
-    color: #593ae8;
-    margin-top: 15px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+#img-wa-logo {
+    width: 15%;
+    display: block;
+    margin-left: auto;
+    margin-bottom: -15px;
 }
